<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#234"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/header_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="#F9F6EE"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/email_username"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/emailUsername"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_login"
        app:layout_constraintVertical_bias="0.17"
        />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFF"
        android:textColorHint="#808080"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_username"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_login"
        android:textSize="20sp"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        />

    <Button
        android:id="@+id/signUpQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/signup_question"
        android:background="@android:color/transparent"
        android:textSize="12sp"
        android:textColor="#FFB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        />

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpQuestion"
        app:layout_constraintVertical_bias="0.12"
        />
</androidx.constraintlayout.widget.ConstraintLayout>