...
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/reserved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reservedSubFragment"
        android:layout_width="0dp"
...
            android:text="Upcoming" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/completed_booking_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Completed" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
